--- a/main.css
+++ b/main.css
@@ -14,7 +14,7 @@ h3 {margin: 0px;
     font-family: 'DIN Offc Pro Medium', Arial, Regular;
     color: #F9F9DD;
 }
-div{
+box{
     position: absolute;
     top: 0;
     right: 0;
