change font colour to deeper blue

--- a/main.css
+++ b/main.css
@@ -29,5 +29,5 @@ h3 {margin: 0px;
     font-size: 15px;
     text-align: left;
     font-family: 'DIN Offc Pro Medium', Arial, Regular;
-    color: #8DA7BE;
+    color: #2B4162;
 }
