--- a/main.css
+++ b/main.css
@@ -32,6 +32,11 @@ h3 {margin: 0px;
     color: #2B4162;
 }
 
+.wrapper,.copyright {
+	padding: 20px;
+	text-align: center;
+}
+
 social-icons .fa {
 	font-size: 1.8em;
 }
@@ -60,7 +65,6 @@ social-icons .fa {
 }
 .social-icons .fa-github,.social-icons .fa-github-alt,.social-icons .fa-github-square{background-color:#070709;} 
 .social-icons .fa-linkedin,.social-icons .fa-linkedin-square{background-color:#0085AE;} 
-
 
 .social-icons .fa:hover, .social-icons .fa:active {
 	color: #FFF;
