--- a/main.css
+++ b/main.css
@@ -32,57 +32,96 @@ h3 {margin: 0px;
     color: #2B4162;
 }
 
-.wrapper,.copyright {
-	padding: 20px;
-	text-align: center;
+.cf:before,
+.cf:after {
+    content: " ";
+    display: table;
 }
 
-social-icons .fa {
-	font-size: 1.8em;
-}
-.social-icons .fa {
-	width: 50px;
-	height: 50px;
-	line-height: 50px;
-	text-align: center;
-	color: #FFF;
-	color: rgba(255, 255, 255, 0.8);
-	-webkit-transition: all 0.3s ease-in-out;
-	-moz-transition: all 0.3s ease-in-out;
-	-ms-transition: all 0.3s ease-in-out;
-	-o-transition: all 0.3s ease-in-out;
-	transition: all 0.3s ease-in-out;
+.cf:after {
+    clear: both;
 }
 
-.social-icons.icon-circle .fa{ 
-	border-radius: 50%;
+.csmb, .csmb-flat {
+  float: left;
 }
-.social-icons.icon-rounded .fa{
-	border-radius:5px;
-}
-.social-icons.icon-flat .fa{
-	border-radius: 0;
-}
-.social-icons .fa-github,.social-icons .fa-github-alt,.social-icons .fa-github-square{background-color:#070709;} 
-.social-icons .fa-linkedin,.social-icons .fa-linkedin-square{background-color:#0085AE;} 
 
-.social-icons .fa:hover, .social-icons .fa:active {
-	color: #FFF;
-	-webkit-box-shadow: 1px 1px 3px #333;
-	-moz-box-shadow: 1px 1px 3px #333;
-	box-shadow: 1px 1px 3px #333; 
+  .container.buttons .csmb {
+    margin-right: 8px;
+  }
+
+.container {
+  width: 960px;
+  margin: 0 auto 10px;
+  clear: both;
 }
-.social-icons.icon-zoom .fa:hover, .social-icons.icon-zoom .fa:active { 
- 	-webkit-transform: scale(1.1);
-	-moz-transform: scale(1.1);
-	-ms-transform: scale(1.1);
-	-o-transform: scale(1.1);
-	transform: scale(1.1); 
+
+  /*.container.buttons {
+    padding-top: 10px;
+  }*/
+
+.types-container {
+  width: 50%;
+  float: left;
 }
-.social-icons.icon-rotate .fa:hover, .social-icons.icon-rotate .fa:active { 
-	-webkit-transform: scale(1.1) rotate(360deg);
-	-moz-transform: scale(1.1) rotate(360deg);
-	-ms-transform: scale(1.1) rotate(360deg);
-	-o-transform: scale(1.1) rotate(360deg);
-	transform: scale(1.1) rotate(360deg);
+
+  .types-container.default .type, .types-container.default .buttons {
+    float: right;
+  }
+
+  .types-container.default .type {
+    margin: 0 20px 0 0;
+  }
+
+  .types-container.flat .type, .types-container.flat .buttons {
+    float: left;
+  }
+
+  .types-container.flat .type {
+    margin: 0 0 0 20px;
+  }
+
+  .types-container .button-container {
+    overflow: hidden;
+    padding: 4px;
+  }
+
+  .types-container .type {
+    line-height: 36px;
+  }
+
+  .types-container .buttons {
+    width: 36px;
+    height: 36px;
+  }
+
+.buttons-header {
+  background-color: #f5f5f5;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 36px;
+  padding: 0 20px;
+  margin: 0 -20px 20px;
 }
+
+.buttons-container {
+  margin-bottom: 10px;
+}
+
+  .buttons-container .type, .buttons-container .buttons {
+    float: left;
+  }
+
+  .buttons-container .type {
+    line-height: 36px;
+    margin: 0 0 0 20px;
+  }
+
+  .buttons-container .buttons {
+    height: 36px;
+  }
+
+  .buttons-container .buttons-group {
+    float: left;
+    margin-right: 20px;
+  }
