--- a/main.css
+++ b/main.css
@@ -31,9 +31,7 @@ h3 {margin: 0px;
     font-family: 'DIN Offc Pro Medium', Arial, Regular;
     color: #2B4162;
 }
-
-h4 {text-align: left;
-    margin: -50;
+h4 {margin: -10px;
 }
 
 .cf:before,
