--- a/main.css
+++ b/main.css
@@ -31,7 +31,8 @@ h3 {margin: 0px;
     font-family: 'DIN Offc Pro Medium', Arial, Regular;
     color: #2B4162;
 }
-h4 {margin: -60px;
+h4 {margin: -85px;
+   text-align: left;
 }
 
 .cf:before,
