--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@ html {
 
 .overlay {
     margin: auto;
-    background: #C6C6C6;
+    background: #F46036;
     font-family: 'DIN Offc Pro Medium', Arial, Regular;
     overflow: auto;
     border-radius: 3px;
