--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 html {
 	margin: 0;
-	background-color: #E8E6DE;
+	background-color: #F9F8F7;
 }
 
 .overlay {
@@ -16,19 +16,21 @@ html {
     top: 0;
     height: 190px;
     margin-top: 240px;
-    width: 430px;
+    width: 400px;
 }
 
-p1 {margin: 0px;
-    font-size: 16px;
+h2 {margin: 0px;
+    font-size: 13.5px;
+    line-height:20px;
     text-align: left;
-    font-family: 'DIN Offc Pro Medium', Arial, Regular;
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     color: #ffffff
 }
-p2 {margin: 0px;
-    font-size: 15px;
+h3 {margin: 0px;
+    font-size: 13px;
+    line-height:20px;
     text-align: left;
-    font-family: 'DIN Offc Pro Medium', Arial, Regular;
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     color: #2B4162;
 }
 
