--- a/main.css
+++ b/main.css
@@ -5,8 +5,8 @@ html {
 
 .overlay {
     margin: auto;
-    background: #6D6466;
-    font-family: 'DIN Offc Pro Medium', Arial, Regular;
+    background: #DADAD9;
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     overflow: auto;
     border-radius: 3px;
     padding: 10px;
