--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@ html {
 
 .overlay {
     margin: auto;
-    background: #f4f6f9;
+    background: #524948;
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     overflow: auto;
     border-radius: 3px;
@@ -24,7 +24,7 @@ h2 {margin: 0px;
     line-height:20px;
     text-align: left;
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    color: #ffffff
+    color: #f4f6f9
 }
 h3 {margin: 0px;
     font-size: 13px;
