--- a/main.css
+++ b/main.css
@@ -9,7 +9,7 @@ html {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     overflow: auto;
     border-radius: 3px;
-    padding: 50px;
+    padding: 30px;
 }
 
 #box {
@@ -31,7 +31,7 @@ h3 {margin: 0px;
     line-height:20px;
     text-align: left;
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    color: #2B4162;
+    color: #F4F6F9;
 }
 
 .cf:before,
