--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@ html {
 
 .overlay {
     margin: auto;
-    background: #524948;
+    background: #828A95;
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     overflow: auto;
     border-radius: 3px;
