--- a/main.css
+++ b/main.css
@@ -24,7 +24,7 @@ h2 {margin: 0px;
     line-height:20px;
     text-align: left;
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    color: #EFEFEF;
+    color: #D6CBC1;
 }
 h3 {margin: 0px;
     font-size: 13px;
