--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@ html {
 }
 
 .overlay {
-    background: #c1ccd6;
+    background: #504746;
     margin: auto;
     border-radius: 4px;
     padding: 12px;
