--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@ html {
 }
 
 .overlay {
-    background: #070707;
+    background: #1B1725;
     margin: auto;
     border-radius: 4px;
     padding: 12px;
