--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@ html {
 }
 
 .overlay {
-    background: #2F323A;
+    background: #000505;
     margin: auto;
     border-radius: 4px;
     padding: 12px;
