--- a/main.css
+++ b/main.css
@@ -24,7 +24,7 @@ p2 {margin: 0px;
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     color: #fff;
 }
-33 {margin: 0px;
+p3 {margin: 0px;
     font-size: 13px;
     line-height:20px;
     text-align: left;
