--- a/main.css
+++ b/main.css
@@ -23,14 +23,16 @@ h2 {margin: 0px;
     text-align: left;
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     color: #fff;
-    font-weight: 100;
+    font-weight: 200;
 }
-p3 {margin: 0px;
+
+h3 {margin: 0px;
     font-size: 13px;
     line-height:20px;
     text-align: left;
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     color: #ED6A5A;
+    font-weight: 200;
 }
 
 .cf:before,
