--- a/main.css
+++ b/main.css
@@ -23,6 +23,7 @@ h2 {margin: 0px;
     text-align: left;
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     color: #fff;
+    font-weight: 300
 }
 
 h3 {margin: -1px;
