--- a/main.css
+++ b/main.css
@@ -31,7 +31,7 @@ h3 {margin: -1px;
     line-height:20px;
     text-align: left;
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    color: #ED6A5A;
+    color: #F2CCC3;
     font-weight: 300;
 }
 
