--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@ html {
 }
 
 .overlay {
-    background: #1E1E1E;
+    background: #202020;
     margin: auto;
     border-radius: 4px;
     padding: 17px;
