--- a/rrssb.css
+++ b/rrssb.css
@@ -20,15 +20,15 @@
 }
 
 .rrssb-buttons li.rrssb-email a{background-color:#C84630}
-.rrssb-buttons li.rrssb-email a:hover{background-color:#bb5a49}
+.rrssb-buttons li.rrssb-email a:hover{background-color:#943524}
 .rrssb-buttons li.rrssb-tumblr a{background-color:#32506d}
 .rrssb-buttons li.rrssb-tumblr a:hover{background-color:#22364a}
 .rrssb-buttons li.rrssb-linkedin a{background-color:#C84630}
-.rrssb-buttons li.rrssb-linkedin a:hover{background-color:#bb5a49}
+.rrssb-buttons li.rrssb-linkedin a:hover{background-color:#943524}
 .rrssb-buttons li.rrssb-twitter a{background-color:#26c4f1}
 .rrssb-buttons li.rrssb-twitter a:hover{background-color:#0eaad6}
 .rrssb-buttons li.rrssb-github a{background-color:#C84630}
-.rrssb-buttons li.rrssb-github a:hover{background-color:#bb5a49}
+.rrssb-buttons li.rrssb-github a:hover{background-color:#943524}
 .rrssb-buttons li.rrssb-instagram a{background-color:#125688}
 .rrssb-buttons li.rrssb-instagram a:hover{background-color:#0c3a5b}
 .rrssb-buttons li.rrssb-print a{background-color:#8d98a2}
