--- a/rrssb.css
+++ b/rrssb.css
@@ -19,7 +19,7 @@
   padding:0 2px;
 }
 
-.rrssb-buttons li.rrssb-email a{background-color:#C84630}
+.rrssb-buttons li.rrssb-email a{background-color:#F9F7F4}
 .rrssb-buttons li.rrssb-email a:hover{background-color:#943524}
 .rrssb-buttons li.rrssb-tumblr a{background-color:#32506d}
 .rrssb-buttons li.rrssb-tumblr a:hover{background-color:#22364a}
