--- a/rrssb.css
+++ b/rrssb.css
@@ -3,7 +3,7 @@
   font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;
   font-size:12px;
   height:36px;
-  margin:0;
+  margin:20px;
   padding:0;
   width:100%;
 }
@@ -15,11 +15,11 @@
   height:100%;
   line-height:13px;
   list-style:none;
-  margin:0;
+  margin:20px;
   padding:0 2px;
 }
 
-.rrssb-buttons li.rrssb-email a{background-color:#F9F7F4}
+.rrssb-buttons li.rrssb-email a{background-color:#C84630}
 .rrssb-buttons li.rrssb-email a:hover{background-color:#943524}
 .rrssb-buttons li.rrssb-tumblr a{background-color:#32506d}
 .rrssb-buttons li.rrssb-tumblr a:hover{background-color:#22364a}
