--- a/rrssb.css
+++ b/rrssb.css
@@ -3,7 +3,7 @@
   font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;
   font-size:12px;
   height:36px;
-  margin:20px;
+  margin-top:20px;
   padding:0;
   width:100%;
 }
@@ -15,7 +15,7 @@
   height:100%;
   line-height:13px;
   list-style:none;
-  margin:0;
+  margin:2px;
   padding:0 2px;
 }
 
