--- a/rrssb.css
+++ b/rrssb.css
@@ -3,7 +3,8 @@
   font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;
   font-size:12px;
   height:36px;
-  margin-top:20px;
+  margin-top:18px;
+  margin-left:5px;
   padding:0;
   width:100%;
 }
