--- a/rrssb.css
+++ b/rrssb.css
@@ -2,7 +2,7 @@
   box-sizing:border-box;
   font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;
   font-size:12px;
-  height:36px;
+  height:45px;
   margin-top:15px;
   margin-left:4px;
   padding:0;
@@ -16,8 +16,8 @@
   height:100%;
   line-height:13px;
   list-style:none;
-  margin:1px;
-  padding:0 2px;
+  margin:0;
+  padding:0;
 }
 
 .rrssb-buttons li.rrssb-email a{background-color:#C84630}
