--- a/rrssb.css
+++ b/rrssb.css
@@ -2,7 +2,8 @@
   box-sizing:border-box;
   font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;
   font-size:12px;
-  height:45px;
+  height:39px;
+  width: 20px;
   margin-top:15px;
   margin-left:4px;
   padding:0;
@@ -16,7 +17,7 @@
   height:100%;
   line-height:13px;
   list-style:none;
-  margin:0;
+  margin:2px;
   padding:0;
 }
 
