--- a/rrssb.css
+++ b/rrssb.css
@@ -16,8 +16,8 @@
   height:100%;
   line-height:13px;
   list-style:none;
-  margin:2px;
-  padding:1px;
+  margin:3px;
+  padding:0;
 }
 
 .rrssb-buttons li.rrssb-email a{background-color:#C84630}
