--- a/rrssb.css
+++ b/rrssb.css
@@ -3,9 +3,9 @@
   font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;
   font-size:12px;
   height:38px;
-  margin-top:85px;
-  margin-left:70px;
-  padding:0;
+  margin-top:10px;
+  margin-left:3px;
+  padding:2px;
   width:100%;
 }
 .rrssb-buttons:after{clear:both}
