changed twitter img colour

--- a/rrssb.css
+++ b/rrssb.css
@@ -26,8 +26,8 @@
 .rrssb-buttons li.rrssb-tumblr a:hover{background-color:#22364a}
 .rrssb-buttons li.rrssb-linkedin a{background-color:#C84630}
 .rrssb-buttons li.rrssb-linkedin a:hover{background-color:#943524}
-.rrssb-buttons li.rrssb-twitter a{background-color:#26c4f1}
-.rrssb-buttons li.rrssb-twitter a:hover{background-color:#0eaad6}
+.rrssb-buttons li.rrssb-twitter a{background-color:#C84630}
+.rrssb-buttons li.rrssb-twitter a:hover{background-color:#943524}
 .rrssb-buttons li.rrssb-github a{background-color:#C84630}
 .rrssb-buttons li.rrssb-github a:hover{background-color:#943524}
 .rrssb-buttons li.rrssb-instagram a{background-color:#125688}
