--- a/main.css
+++ b/main.css
@@ -3,18 +3,14 @@ html {
 	background-color: #F9F7F4;
 }
 
-.overlay {
-    background: #202020;
-    margin: auto;
-    border-radius: 4px;
-    padding: 17px;
-}
-
 #box {
-    top: 200px;
-    height: 163px;
-    margin-top: 165px;
-    width: 360px;
+	height: 8.5em;
+	width: 23em;
+	margin: auto;
+	margin-top: 15%;
+	background: #202020;
+	padding: 0.5em;
+	border-radius: .3em;
 }
 
 h2 {margin: 0px;
